test/conformance/chainsaw/validate/clusterpolicy/standard/psa/seccomp-latest-check-no-exclusion/bad-pod-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-restricted-seccomp-profile-1
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - name: busybox
    image: busybox:1.35
    args:
    - sleep
    - 1d
  securityContext:
    seccompProfile:
      type: Unconfined
