test/conformance/chainsaw/validate/clusterpolicy/standard/psa/seccomp-latest-check-no-exclusion/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-restricted-seccomp-profile-3
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - name: busybox
    image: busybox:1.35
    args:
    - sleep
    - 1d
    securityContext:
      seccompProfile:
        type: RuntimeDefault
