test/conformance/chainsaw/validate/clusterpolicy/standard/psa/seccomp-latest-check-no-exclusion/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: latest-check-no-exclusion
spec:
  background: false
  rules:
  - name: restricted
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      failureAction: Enforce
      podSecurity:
        level: baseline
        version: latest
