test/conformance/chainsaw/validate/clusterpolicy/standard/psa/seccomp-latest-check-no-exclusion/02-resources.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: resources
spec:
  timeouts: {}
  try:
  - apply:
      check:
        ($error != null): true
      file: bad-pod-1.yaml
  - apply:
      check:
        ($error != null): true
      file: bad-pod-2.yaml
  - apply:
      file: good-pod.yaml
