test/conformance/chainsaw/validate/clusterpolicy/standard/psa/seccomp-latest-check-no-exclusion/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: seccomp-latest-check-no-exclusion
spec:
  steps:
  - name: create policy
    use:
      template: ../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: latest-check-no-exclusion
  - name: step-02  # cleanup context deadline exceeded
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod-1.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod-2.yaml
    - apply:
        file: good-pod.yaml
  # cleanup context deadline exceeded
